# VolumetricCloud

./: CMakeLists.txt  README.md
assets/: imgui.ini
assets/shaders/border_pipeline/: BorderPipeline.frag.spv  BorderPipeline.vert.spv
assets/shaders/grid_pipeline/: GridPipeline.frag.hlsl.spv  GridPipeline.vert.spv
assets/shaders/image_pipeline/: ImagePipeline.frag.spv  ImagePipeline.vert.spv
assets/shaders/solid_fill_pipeline/: SolidFillPipeline.frag.spv  SolidFillPipeline.vert.spv
assets/shaders/spherical_volume/: SphericalVolume.common.hlsl  SphericalVolume.frag.hlsl  SphericalVolume.vert.hlsl
assets/shaders/sprite_pipeline/: SpritePipeline.frag.spv  SpritePipeline.vert.spv
assets/shaders/text_overlay_pipeline/: TextOverlay.frag.spv  TextOverlay.vert.spv
engine/asset_system/: AssetTexture.cpp
engine/bedrock/: BedrockPath.cpp  BedrockPath.hpp
engine/importer/: CMakeLists.txt
engine/render_system/: BufferTracker.cpp  CMakeLists.txt  DescriptorSetSchema.cpp  LogicalDevice.cpp  LogicalDevice.hpp  RenderTypes.cpp  UI.cpp
engine/render_system/camera/: ArcballCamera.cpp  (+1 more)
executables/volumetric_sphere/: CMakeLists.txt  VolumetricSphereApp.cpp  VolumetricSphereApp.hpp  VolumetricSphereMain.cpp
shared/: CMakeLists.txt  GridPipeline.cpp  GridRenderer.cpp  SceneFrameBuffer.cpp  SceneRenderPass.cpp  SceneRenderResource.cpp
webview/: WebViewContainer.cpp
webview/renderer/: BorderPipeline.cpp  BorderRenderer.cpp  CustomFontRenderer.cpp  ImagePipeline.cpp  ImageRenderer.cpp  SolidFillPipeline.cpp  SolidFillRenderer.cpp  TextOverlayPipeline.cpp
(+6 files in other folders)
